--- a/stronafirmy/media/main.css
+++ b/stronafirmy/media/main.css
@@ -7,17 +7,7 @@ body
     font-size: 17px;
 }
 
-h1.logo
-{
-	font-size: 44px;
-	font-weight: 700;
-	color: #ddd;
-	text-align: center;
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	margin-top: 50px;
-	margin-bottom: 40px;
-}
+
 .logof
 {
 	margin-left: auto;
@@ -27,6 +17,17 @@ h1.logo
 	margin-bottom: 10px;
 	margin-top: 20px;
 	background-color: #2874A6;
+}
+
+.logob
+{
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	padding-bottom: 20px;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	background-color: #191d21;
 }
 
 #topnav
@@ -163,12 +164,14 @@ h2
 .blackbutton
 {
 	background-color: #2471A3;
-	padding: 15px;
-	color: #efefef;
+	color: #FFFFFF;
 	font-size: 19px;
 	text-decoration: none;
 	border-radius: 5px;
-	min-width: 300px;
+	height: 30px;
+	width: 225px;
+	margin-left: 350px;
+	
 }
 
 .blackbutton:hover
@@ -196,6 +199,7 @@ h2
 	width: 250px;
 	height: 155px;
 	float:left;
+	
 }
 
 .fb:hover
